--- a/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -1,1 +1,15 @@
 <h1> Welcome to {{hotelName}}</h1>
+<div [hidden]="hideRooms">
+  Number of Rooms:
+  <div [innerText]="numberOfRooms"></div>
+
+  <div>{{rooms?.availableRooms ?? "No Rooms"}}
+  </div>
+
+</div>
+<div *ngIf="rooms?.availableRooms">
+  Rooms List
+</div>
+
+<button (click)="toggle()">Toggle</button>
+
