--- a/hotelinventoryapp/src/app/app.component.html
+++ b/hotelinventoryapp/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>Hello World</h1>
-<app-rooms>
-</app-rooms>
+<app-rooms></app-rooms>
+<!--<div [ngSwitch]="role">-->
+<!--  <div *ngSwitchCase="'User'">-->
+<!--    Welcome User!-->
+<!--  </div>-->
+<!--  <div *ngSwitchCase="'Admin'"><app-rooms></app-rooms></div>-->
+<!--  <div *ngSwitchDefault>Not Authorised</div>-->
+<!--</div>-->
