Commit-ng-content

--- a/hotelinventoryapp/src/app/app.component.html
+++ b/hotelinventoryapp/src/app/app.component.html
@@ -1,4 +1,15 @@
-<app-rooms></app-rooms>
+<h1>Hello World</h1>
+
+<!-- <app-rooms></app-rooms> -->
+
+<app-container>
+    <app-rooms></app-rooms>
+    <app-employee></app-employee>
+    <h1> This is from ng-content </h1>
+</app-container>
+
+<div #name>
+</div>
 <!--<div [ngSwitch]="role">-->
 <!--  <div *ngSwitchCase="'User'">-->
 <!--    Welcome User!-->
@@ -6,3 +17,7 @@
 <!--  <div *ngSwitchCase="'Admin'"><app-rooms></app-rooms></div>-->
 <!--  <div *ngSwitchDefault>Not Authorised</div>-->
 <!--</div>-->
+<!-- 
+<div>
+    <ng-template #user></ng-template>
+</div> -->
