--- a/hotelinventoryapp/src/app/rooms/rooms-list/rooms-list.component.html
+++ b/hotelinventoryapp/src/app/rooms/rooms-list/rooms-list.component.html
@@ -1,16 +1,21 @@
   <div>
+    {{title}}
+  </div>
+  <div>
   <table class="table">
     <tr>
       <th>Index</th>
+      <th>Even/Odd</th>
       <th>Room Number</th>
       <th>Room Type</th>
       <th>Room Price</th>
       <th>Room Amenities</th>
       <th>Checkin Time</th>
       <th>Rating</th>
+      <th>Select Room</th>
     </tr>
     <tr [ngClass]="e? 'even':'odd'"
-        *ngFor="let room of rooms | slice: 0:3 ;let e= even; let o= odd ;let i=index">
+        *ngFor="let room of rooms ;let e= even; let o= odd ;let i=index">
       <td>{{i}}</td>
       <td>{{e? "Even":"Odd"}}</td>
       <td>{{room.roomNumber}}</td>
@@ -19,6 +24,12 @@
       <td>{{room.amenities | titlecase }}</td>
       <td>{{room.checkinTime | date:'short'}}</td>
       <td>{{room.rating | number: '1.1' }}</td>
+      <td>
+        <button 
+        class="btn btn-primary"
+        (click)="SelectRoom(room)"> 
+        Select </button>
+      </td>
     </tr>
   </table>
 </div>
