--- a/hotelinventoryapp/src/styles.scss
+++ b/hotelinventoryapp/src/styles.scss
@@ -7,3 +7,13 @@
 
 @import "node_modules/bootstrap/dist/css/bootstrap.min.css";
 
+.even{
+    background-color:steelblue;
+    color:white;
+  }
+  
+  .odd{
+  background-color: tomato;
+  color: white;
+  }
+  
