--- a/hotelinventoryapp/src/app/app.component.html
+++ b/hotelinventoryapp/src/app/app.component.html
@@ -1,15 +1,15 @@
 <h1>Hello World</h1>
 
-<!-- <app-rooms></app-rooms> -->
-
+<app-rooms></app-rooms>
+<app-employee></app-employee>
 <app-container>
     <app-rooms></app-rooms>
     <app-employee></app-employee>
     <h1> This is from ng-content </h1>
 </app-container>
-
+<!-- 
 <div #name>
-</div>
+</div> -->
 <!--<div [ngSwitch]="role">-->
 <!--  <div *ngSwitchCase="'User'">-->
 <!--    Welcome User!-->
