--- a/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -10,7 +10,6 @@
 
 </div>
 
-
 <div *ngIf="selectedRoom">
 {{ selectedRoom | json}}
 </div>
@@ -18,7 +17,7 @@
 <div>
   <button (click)="addRoom()">Add Room</button>
 </div>
-<div *ngIf="roomList.length > 0">
+<div *ngIf="hideRooms">
   <app-rooms-list [rooms]="roomList" [title]="title"
 (selectedRoom)="selectRoom($event)">
 </app-rooms-list>
