--- a/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -1,6 +1,5 @@
 <!-- <h1> Welcome to {{hotelName}}</h1> -->
 <app-header>
-
 </app-header>
 <div [hidden]="hideRooms">
   Number of Rooms:
@@ -25,3 +24,10 @@
 
 <button (click)="toggle()">Toggle</button>
 
+<button (click)="editRoom()">Edit Room</button>
+
+<button (click)="deleteRoom()">Delete Room</button>
+
+<h1>
+  {{totalBytes}} Loaded
+</h1>
