--- a/hotelinventoryapp/src/app/app.component.html
+++ b/hotelinventoryapp/src/app/app.component.html
@@ -1,14 +1,13 @@
-<h1>Hello World</h1>
+<!-- <h1>Hello World</h1>
 <app-rooms></app-rooms>
-<app-employee></app-employee>
+<app-employee></app-employee> -->
 
 <!-- <app-container>
     <app-rooms></app-rooms>
     <app-employee></app-employee>
     <h1> This is from ng-content </h1>
 </app-container> -->
-<!-- 
-<div #name>
+<!-- <div #name>
 </div> -->
 <!--<div [ngSwitch]="role">-->
 <!--  <div *ngSwitchCase="'User'">-->
@@ -21,3 +20,6 @@
 <div>
     <ng-template #user></ng-template>
 </div> -->
+<a [routerLink]="'rooms'">Rooms</a>
+<a [routerLink]="'employee'">Employee</a>
+<router-outlet></router-outlet>
