--- a/hotelinventoryapp/src/app/rooms/rooms.component.html
+++ b/hotelinventoryapp/src/app/rooms/rooms.component.html
@@ -1,6 +1,8 @@
 <!-- <h1> Welcome to {{hotelName}}</h1> -->
 <app-header>
 </app-header>
+<!-- {{rooms$ | async | json}} -->
+
 <div [hidden]="hideRooms">
   Number of Rooms:
   <div [ngStyle]="room.availableRooms? {'color':'Green'}:{'color':'Black'}"
@@ -16,8 +18,14 @@
 <div>
   <button (click)="addRoom()">Add Room</button>
 </div>
-<div *ngIf="hideRooms">
-  <app-rooms-list [rooms]="roomList" [title]="title"
+
+<h1>
+  <!-- {{getError$ | async }} -->
+  Number of Rooms: {{roomsCount$ | async}}
+</h1>
+
+<div *ngIf="rooms$ | async  as rooms">
+  <app-rooms-list [rooms]="rooms" [title]="title"
 (selectedRoom)="selectRoom($event)">
 </app-rooms-list>
 </div>
